--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="p-6">
                     <h3 class="text-xl font-semibold mb-3">UK Food Reviews</h3>
                     <p class="text-gray-600 mb-4">Authentic food reviews across the United Kingdom by top local YouTubers</p>
-                    <a href="https://ytfoodreviews.com/uk" class="text-blue-600 hover:text-blue-700 font-medium">Learn More →</a>
+                    <a href="https://ytfoodreviews.com/uk.html" class="text-blue-600 hover:text-blue-700 font-medium">Learn More →</a>
                 </div>
             </div>
             <div class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 border border-gray-200 hover:border-blue-500 relative">
