--- a/index.html
+++ b/index.html
@@ -65,19 +65,7 @@
         </div>
     </section>
 
-    <!-- AdSense Ad Unit - After Hero Section -->
-    <div class="container mx-auto px-6 py-4 text-center">
-        <!-- FoodReviews -->
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-5037631667606914"
-             data-ad-slot="3475675140"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
+
 
     <section id="directory" class="container mx-auto px-6 py-16">
         <h2 class="text-3xl font-bold mb-8 text-center text-gray-800">Food Review Destinations</h2>
@@ -95,7 +83,7 @@
                 <div class="p-6">
                     <h3 class="text-xl font-semibold mb-3">USA Food Reviews</h3>
                     <p class="text-gray-600 mb-4">Discover American cuisine through the eyes of passionate food vloggers</p>
-                    <a href="https://ytfoodreviews.com/usa" class="text-blue-600 hover:text-blue-700 font-medium">Learn More →</a>
+                    <a href="https://ytfoodreviews.com/usa.html" class="text-blue-600 hover:text-blue-700 font-medium">Learn More →</a>
                 </div>
             </div>
             <div class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 border border-gray-200 hover:border-blue-500 relative">
@@ -106,6 +94,23 @@
                     <a href="https://ytfoodreviews.com/canada" class="text-blue-600 hover:text-blue-700 font-medium">Learn More →</a>
                 </div>
             </div>
+        </div>
+
+        <!-- AdSense Ad Unit - Between Cards -->
+        <div class="container mx-auto py-6 text-center">
+            <!-- FoodReviews -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-5037631667606914"
+                 data-ad-slot="3475675140"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 border border-gray-200 hover:border-blue-500 relative">
                 <div class="absolute top-2 right-2 bg-blue-500 text-white px-2 py-1 rounded-full text-sm">Europe</div>
                 <div class="p-6">
@@ -151,7 +156,7 @@
         <div class="container mx-auto px-6 text-center">
             <h2 class="text-3xl font-bold text-white mb-4">Submit Your Food Review</h2>
             <p class="text-white text-xl mb-8">Join our community of food reviewers</p>
-            <a href="https://ytfoodreviews.com" class="bg-white text-blue-600 px-8 py-3 rounded-full font-semibold hover:bg-opacity-90 transform hover:scale-105 transition duration-300 inline-block shadow-lg">Submit Now</a>
+            <a href="submit.html" class="bg-white text-blue-600 px-8 py-3 rounded-full font-semibold hover:bg-opacity-90 transform hover:scale-105 transition duration-300 inline-block shadow-lg">Submit Now</a>
         </div>
     </section>
 
