Add featured reviews page with structured layout and video content for food reviews

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container mx-auto px-6 text-center text-white relative z-10">
             <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold mb-4 leading-tight">Authentic Food Reviews by YouTubers Around the World</h1>
             <p class="text-xl md:text-2xl mb-8 font-light">Discover the best places to eat with trusted reviews from local YouTubers</p>
-            <a href="https://ytfoodreviews.com" class="bg-white text-blue-600 px-8 py-3 rounded-full font-semibold hover:bg-opacity-90 transform hover:scale-105 transition duration-300 inline-block shadow-lg">Explore Reviews</a>
+            <a href="featured-reviews.html" class="bg-white text-blue-600 px-8 py-3 rounded-full font-semibold hover:bg-opacity-90 transform hover:scale-105 transition duration-300 inline-block shadow-lg">Explore Reviews</a>
         </div>
     </section>
 
@@ -91,7 +91,7 @@
                 <div class="p-6">
                     <h3 class="text-xl font-semibold mb-3">Canadian Food Reviews</h3>
                     <p class="text-gray-600 mb-4">Explore Canada's diverse culinary scene with local YouTubers</p>
-                    <a href="https://ytfoodreviews.com/canada" class="text-blue-600 hover:text-blue-700 font-medium">Learn More →</a>
+                    <a href="https://ytfoodreviews.com/canada.html" class="text-blue-600 hover:text-blue-700 font-medium">Learn More →</a>
                 </div>
             </div>
         </div>
