--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 border border-gray-200 hover:border-blue-500 relative">
-                <div class="absolute top-2 right-2 bg-red-500 text-white px-2 py-1 rounded-full text-sm">North America</div>
+                <div class="absolute top-2 right-2 bg-red-500 text-white px-2 py-1 rounded-full text-sm">Canada</div>
                 <div class="p-6">
                     <h3 class="text-xl font-semibold mb-3">Canadian Food Reviews</h3>
                     <p class="text-gray-600 mb-4">Explore Canada's diverse culinary scene with local YouTubers</p>
