--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@
             <div class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 border border-gray-200 hover:border-blue-500 relative">
                 <div class="absolute top-2 right-2 bg-blue-500 text-white px-2 py-1 rounded-full text-sm">Europe</div>
                 <div class="p-6">
-                    <h3 class="text-xl font-semibold mb-3">European Food Reviews</h3>
-                    <p class="text-gray-600 mb-4">Experience Europe's rich culinary traditions through authentic reviews</p>
-                    <a href="https://ytfoodreviews.com/Europe" class="text-blue-600 hover:text-blue-700 font-medium">Learn More →</a>
+                    <h3 class="text-xl font-semibold mb-3">Thailand Food Reviews</h3>
+                    <p class="text-gray-600 mb-4">Experience Thailand rich culinary traditions through authentic reviews</p>
+                    <a href="https://ytfoodreviews.com/thailand.html" class="text-blue-600 hover:text-blue-700 font-medium">Learn More →</a>
                 </div>
             </div>
             <div class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 border border-gray-200 hover:border-blue-500 relative">
                 <div class="absolute top-2 right-2 bg-green-500 text-white px-2 py-1 rounded-full text-sm">Asia</div>
                 <div class="p-6">
-                    <h3 class="text-xl font-semibold mb-3">Indian Food Reviews</h3>
-                    <p class="text-gray-600 mb-4">Explore India's vibrant street food and restaurant scene</p>
-                    <a href="https://ytfoodreviews.com/india" class="text-blue-600 hover:text-blue-700 font-medium">Learn More →</a>
+                    <h3 class="text-xl font-semibold mb-3">Singapore Food Reviews</h3>
+                    <p class="text-gray-600 mb-4">Explore Singapore's vibrant street food and restaurant scene</p>
+                    <a href="https://ytfoodreviews.com/singapore.html" class="text-blue-600 hover:text-blue-700 font-medium">Learn More →</a>
                 </div>
             </div>
             <div class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition duration-300 border border-gray-200 hover:border-blue-500 relative">
@@ -132,7 +132,7 @@
                 <div class="p-6">
                     <h3 class="text-xl font-semibold mb-3">Dubai Food Reviews</h3>
                     <p class="text-gray-600 mb-4">Discover luxury dining and hidden gems in Dubai's food scene</p>
-                    <a href="https://ytfoodreviews.com/dubai" class="text-blue-600 hover:text-blue-700 font-medium">Learn More →</a>
+                    <a href="https://ytfoodreviews.com/dubai.html" class="text-blue-600 hover:text-blue-700 font-medium">Learn More →</a>
                 </div>
             </div>
         </div>
