Add AMP Auto Ads script to Dubai and Singapore food review pages

--- a/singapore.html
+++ b/singapore.html
@@ -17,6 +17,9 @@
     <!-- Google AdSense Code -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5037631667606914" crossorigin="anonymous"></script>
 
+    <!-- AMP Auto Ads Script -->
+    <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
+
     <!-- Structured Data for SEO -->
     <script type="application/ld+json">
     {
@@ -165,6 +168,9 @@
     </style>
 </head>
 <body class="min-h-screen">
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-5037631667606914">
+</amp-auto-ads>
     <!-- Header Section -->
     <header class="header-bg py-12 px-4 text-center">
         <div class="container mx-auto">
