Add AMP Auto Ads script to multiple HTML files and create ads.txt for AdSense configuration

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- Google AdSense Code -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5037631667606914" crossorigin="anonymous"></script>
 
+    <!-- AMP Auto Ads Script -->
+    <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
+
     <!-- Structured Data for SEO -->
     <script type="application/ld+json">
     {
@@ -32,6 +35,9 @@
     </script>
 </head>
 <body>
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-5037631667606914">
+</amp-auto-ads>
 
     <header class="fixed w-full bg-white shadow-md z-50">
         <nav class="container mx-auto px-6 py-4">
