--- a/submit.html
+++ b/submit.html
@@ -13,8 +13,14 @@
 
     <!-- Google AdSense Code -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5037631667606914" crossorigin="anonymous"></script>
+
+    <!-- AMP Auto Ads Script -->
+    <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
 </head>
 <body class="bg-gray-50">
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-5037631667606914">
+</amp-auto-ads>
     <!-- Header -->
     <header class="fixed w-full bg-white shadow-md z-50">
         <nav class="container mx-auto px-6 py-4">
