--- a/usa.html
+++ b/usa.html
@@ -20,6 +20,9 @@
     <!-- Google AdSense Code -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5037631667606914" crossorigin="anonymous"></script>
 
+    <!-- AMP Auto Ads Script -->
+    <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
+
     <!-- Structured Data for SEO -->
     <script type="application/ld+json">
     {
@@ -173,6 +176,9 @@
     </style>
 </head>
 <body class="min-h-screen">
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-5037631667606914">
+</amp-auto-ads>
     <!-- Header Section -->
     <header class="header-bg text-white">
         <div class="container mx-auto py-8 px-4 md:px-6 lg:px-8">
