Add Google AdSense account meta tag to multiple HTML files for ad configuration

--- a/dubai.html
+++ b/dubai.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="description" content="Discover the best Dubai food review YouTubers covering luxury restaurants, street food, Emirati cuisine, and international food across the city. Find content creators exploring Dubai's diverse culinary landscape.">
+    <meta name="google-adsense-account" content="ca-pub-5037631667606914">
     <meta name="keywords" content="Dubai food YouTubers, Dubai food reviewers, luxury restaurants Dubai, street food Dubai, Emirati cuisine, Indian food Dubai, Lebanese food Dubai, food markets Dubai">
     <link rel="canonical" href="https://ytfoodreviews.com/dubai">
     <meta name="robots" content="index, follow">
