--- a/singapore.html
+++ b/singapore.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/all.min.css">
     <meta name="description" content="Discover the best Singapore food review YouTubers covering hawker centers, restaurants, street food, and authentic cuisine across the island. Find content creators exploring Chinese, Malay, Indian, and Peranakan food.">
+    <meta name="google-adsense-account" content="ca-pub-5037631667606914">
     <meta name="keywords" content="Singapore food YouTubers, Singapore food reviewers, hawker center food, Singapore restaurants, street food Singapore, Chinese food Singapore, Malay food Singapore, Indian food Singapore, Peranakan food">
     <link rel="canonical" href="https://ytfoodreviews.com/singapore">
     <meta name="robots" content="index, follow">
