--- a/submit.html
+++ b/submit.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="submit food channel, YouTube food reviewers, food vloggers, food content creators, food review submission">
     <link rel="canonical" href="https://ytfoodreviews.com/submit">
     <meta name="robots" content="index, follow">
+    <meta name="google-adsense-account" content="ca-pub-5037631667606914">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
