--- a/uk.html
+++ b/uk.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="UK food YouTubers, British food reviewers, restaurant reviews UK, street food UK, food vloggers, UK takeaway reviews, London food scene, British food content creators">
     <link rel="canonical" href="https://ytfoodreviews.com/uk">
     <meta name="robots" content="index, follow">
+    <meta name="google-adsense-account" content="ca-pub-5037631667606914">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
