--- a/canada.html
+++ b/canada.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Canadian food YouTubers, Canada food reviewers, restaurant reviews Canada, street food Canada, food vloggers, Canadian takeaway reviews, Toronto food scene, Montreal food scene, Vancouver food scene">
     <link rel="canonical" href="https://ytfoodreviews.com/canada">
     <meta name="robots" content="index, follow">
+    <meta name="google-adsense-account" content="ca-pub-5037631667606914">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
