--- a/featured-reviews.html
+++ b/featured-reviews.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="best food reviews, food review videos, YouTube food reviewers, restaurant reviews, street food videos, food vloggers, culinary experiences">
     <link rel="canonical" href="https://ytfoodreviews.com/featured-reviews">
     <meta name="robots" content="index, follow">
+    <meta name="google-adsense-account" content="ca-pub-5037631667606914">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
