--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="food reviews, YouTube food reviews, restaurant reviews, food bloggers, food vloggers, international cuisine, street food, food recommendations">
     <link rel="canonical" href="https://ytfoodreviews.com">
     <meta name="robots" content="index, follow">
+    <meta name="google-adsense-account" content="ca-pub-5037631667606914">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
