--- a/thailand.html
+++ b/thailand.html
@@ -11,6 +11,7 @@
     <meta name="keywords" content="Thai food YouTubers, Thailand food reviewers, Bangkok street food, Chiang Mai food scene, Phuket food vloggers, Thai cuisine, authentic Thai food">
     <link rel="canonical" href="https://ytfoodreviews.com/thailand">
     <meta name="robots" content="index, follow">
+    <meta name="google-adsense-account" content="ca-pub-5037631667606914">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
