--- a/usa.html
+++ b/usa.html
@@ -11,6 +11,7 @@
     <meta name="keywords" content="USA food YouTubers, American food reviewers, restaurant reviews USA, street food America, food vloggers, US takeaway reviews, California food scene, New York food scene, Texas food scene">
     <link rel="canonical" href="https://ytfoodreviews.com/usa">
     <meta name="robots" content="index, follow">
+    <meta name="google-adsense-account" content="ca-pub-5037631667606914">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
