--- a/dubai.html
+++ b/dubai.html
@@ -201,61 +201,70 @@
         data-ad-client="ca-pub-5037631667606914">
 </amp-auto-ads>
     <!-- Header Section -->
-    <header class="header-bg text-white py-8 px-4 md:px-6 lg:px-8 no-print">
-        <div class="container mx-auto">
-            <div class="flex flex-col md:flex-row justify-between items-center mb-8">
-                <div class="mb-6 md:mb-0 text-center md:text-left">
-                    <h1 class="text-4xl md:text-5xl font-bold mb-2">Dubai Food Review YouTubers</h1>
-                    <p class="text-xl opacity-90 mb-4">The Ultimate Directory</p>
+    <header class="header-bg text-white">
+        <div class="container mx-auto py-8 px-4 md:px-6 lg:px-8">
+            <div class="flex flex-col md:flex-row justify-between items-center">
+                <div class="mb-6 md:mb-0">
+                    <h1 class="text-3xl md:text-4xl font-bold">Dubai Food Review YouTubers</h1>
+                    <p class="text-lg mt-2 opacity-90">The Ultimate Directory</p>
                 </div>
                 <div class="flex flex-col md:flex-row space-y-3 md:space-y-0 md:space-x-4">
                     <a href="index.html" class="px-4 py-2 bg-white text-red-600 font-medium rounded-lg hover:bg-opacity-90 transition flex items-center justify-center md:justify-start">
                         <i class="fas fa-arrow-left mr-2"></i> Back to Home
                     </a>
-                </div>
-            </div>
-            <div class="max-w-xl mx-auto">
-                <div class="relative">
-                    <input type="text" id="search-input" placeholder="Search by name, cuisine type, or description..." class="w-full py-3 px-4 pl-12 bg-white bg-opacity-20 rounded-lg focus:outline-none focus:ring-2 focus:ring-white">
-                    <span class="absolute left-3 top-3 text-white">
-                        <i class="fas fa-search"></i>
-                    </span>
+                    <div class="flex space-x-2 md:space-x-4">
+                        <a href="#luxury-section" class="px-4 py-2 bg-white bg-opacity-20 rounded-lg hover:bg-opacity-30 transition">Luxury</a>
+                        <a href="#street-section" class="px-4 py-2 bg-white bg-opacity-20 rounded-lg hover:bg-opacity-30 transition">Street Food</a>
+                        <a href="#emirati-section" class="px-4 py-2 bg-white bg-opacity-20 rounded-lg hover:bg-opacity-30 transition">Emirati</a>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
 
-    <div class="container mx-auto px-4 py-8">
-        <!-- Filter Section -->
-        <div class="filter-section mb-8 no-print">
-            <h3 class="text-lg font-semibold mb-3">Filter by:</h3>
-            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-2">
-                <button class="filter-button py-2 px-3 rounded-md text-sm font-medium active" data-filter="all">All</button>
-                <button class="filter-button py-2 px-3 rounded-md text-sm font-medium" data-filter="luxury">Luxury Restaurants</button>
-                <button class="filter-button py-2 px-3 rounded-md text-sm font-medium" data-filter="street">Street Food</button>
-                <button class="filter-button py-2 px-3 rounded-md text-sm font-medium" data-filter="emirati">Emirati Cuisine</button>
-                <button class="filter-button py-2 px-3 rounded-md text-sm font-medium" data-filter="indian">Indian Food</button>
-                <button class="filter-button py-2 px-3 rounded-md text-sm font-medium" data-filter="lebanese">Lebanese Food</button>
-                <button class="filter-button py-2 px-3 rounded-md text-sm font-medium" data-filter="international">International</button>
-                <button class="filter-button py-2 px-3 rounded-md text-sm font-medium" data-filter="dessert">Desserts</button>
-                <button class="filter-button py-2 px-3 rounded-md text-sm font-medium" data-filter="seafood">Seafood</button>
-                <button class="filter-button py-2 px-3 rounded-md text-sm font-medium" data-filter="brunch">Brunch</button>
-                <button class="filter-button py-2 px-3 rounded-md text-sm font-medium" data-filter="market">Food Markets</button>
-            </div>
-            <div class="mt-3">
-                <h3 class="text-lg font-semibold mb-2">Subscriber Count:</h3>
-                <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-2">
-                    <button class="filter-button py-2 px-3 rounded-md text-sm font-medium active" data-subscriber="all">All</button>
-                    <button class="filter-button py-2 px-3 rounded-md text-sm font-medium" data-subscriber="mega">Mega (1M+)</button>
-                    <button class="filter-button py-2 px-3 rounded-md text-sm font-medium" data-subscriber="macro">Macro (100K-1M)</button>
-                    <button class="filter-button py-2 px-3 rounded-md text-sm font-medium" data-subscriber="micro">Micro (10K-100K)</button>
-                    <button class="filter-button py-2 px-3 rounded-md text-sm font-medium" data-subscriber="nano">Nano (1K-10K)</button>
+    <!-- Search & Filters Section -->
+    <section class="py-8 bg-white shadow-sm no-print">
+        <div class="container mx-auto px-4 md:px-6 lg:px-8">
+            <div class="search-box rounded-xl p-6">
+                <div class="flex flex-col md:flex-row md:items-center mb-4">
+                    <div class="w-full md:w-1/2 mb-4 md:mb-0 md:mr-4">
+                        <div class="relative">
+                            <input type="text" id="search-input" placeholder="Search by name, description or location..." class="w-full py-3 px-4 pl-12 bg-gray-100 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-400">
+                            <span class="absolute left-3 top-3 text-gray-400">
+                                <i class="fas fa-search"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="w-full md:w-1/2">
+                        <div class="flex flex-wrap gap-2">
+                            <span class="text-sm font-medium mr-2 mt-1">Filter by:</span>
+                            <button class="filter-btn py-1 px-3 rounded-full text-sm bg-gray-200 hover:bg-red-400 hover:text-white transition" data-filter="all">All</button>
+                            <button class="filter-btn py-1 px-3 rounded-full text-sm bg-gray-200 hover:bg-red-400 hover:text-white transition" data-filter="luxury">Luxury</button>
+                            <button class="filter-btn py-1 px-3 rounded-full text-sm bg-gray-200 hover:bg-red-400 hover:text-white transition" data-filter="street">Street Food</button>
+                            <button class="filter-btn py-1 px-3 rounded-full text-sm bg-gray-200 hover:bg-red-400 hover:text-white transition" data-filter="emirati">Emirati</button>
+                            <button class="filter-btn py-1 px-3 rounded-full text-sm bg-gray-200 hover:bg-red-400 hover:text-white transition" data-filter="indian">Indian</button>
+                            <button class="filter-btn py-1 px-3 rounded-full text-sm bg-gray-200 hover:bg-red-400 hover:text-white transition" data-filter="mega">1M+ Subs</button>
+                            <button class="filter-btn py-1 px-3 rounded-full text-sm bg-gray-200 hover:bg-red-400 hover:text-white transition" data-filter="macro">100k-1M Subs</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex items-center text-sm text-gray-500 mt-2">
+                    <p id="results-count" class="mr-4">Showing all YouTubers</p>
+                    <div class="flex items-center ml-auto">
+                        <label for="sort-select" class="mr-2">Sort by:</label>
+                        <select id="sort-select" class="bg-gray-100 rounded-md py-1 px-2 focus:outline-none">
+                            <option value="subscribers-desc">Subscribers (High to Low)</option>
+                            <option value="subscribers-asc">Subscribers (Low to High)</option>
+                            <option value="name-asc">Name (A-Z)</option>
+                            <option value="name-desc">Name (Z-A)</option>
+                        </select>
+                    </div>
                 </div>
             </div>
-            <div class="mt-4 text-sm text-gray-500">
-                <p id="results-count">Showing all YouTubers</p>
-            </div>
         </div>
+    </section>
+
+    <div class="container mx-auto px-4 py-8">
 
         <!-- Luxury Restaurant Reviewers -->
         <section id="luxury-section" class="mb-10 print-break-avoid">
@@ -1551,12 +1560,12 @@
         });
 
         // Category filtering
-        document.querySelectorAll('[data-filter]').forEach(function(button) {
+        document.querySelectorAll('.filter-btn[data-filter]').forEach(function(button) {
             button.addEventListener('click', function() {
                 let filterValue = this.getAttribute('data-filter');
 
                 // Toggle active class
-                document.querySelectorAll('[data-filter]').forEach(btn => btn.classList.remove('active'));
+                document.querySelectorAll('.filter-btn[data-filter]').forEach(btn => btn.classList.remove('active'));
                 this.classList.add('active');
 
                 // Filter cards
@@ -1572,32 +1581,43 @@
                         }
                     }
                 });
+
+                updateResultsCount();
             });
         });
 
-        // Subscriber count filtering
-        document.querySelectorAll('[data-subscriber]').forEach(function(button) {
-            button.addEventListener('click', function() {
-                let subscriberValue = this.getAttribute('data-subscriber');
+        // Add sorting functionality
+        document.getElementById('sort-select').addEventListener('change', function() {
+            const sortValue = this.value;
+            const cards = Array.from(document.querySelectorAll('.card'));
+            const container = cards[0].parentNode;
 
-                // Toggle active class
-                document.querySelectorAll('[data-subscriber]').forEach(btn => btn.classList.remove('active'));
-                this.classList.add('active');
-
-                // Filter cards
-                let cards = document.querySelectorAll('.card');
-                cards.forEach(function(card) {
-                    if (subscriberValue === 'all') {
-                        card.style.display = 'block';
-                    } else {
-                        if (card.getAttribute('data-subscriber') === subscriberValue) {
-                            card.style.display = 'block';
-                        } else {
-                            card.style.display = 'none';
-                        }
-                    }
-                });
+            // Sort the cards
+            cards.sort((a, b) => {
+                if (sortValue === 'subscribers-desc') {
+                    const aCount = parseInt(a.querySelector('.subscription-count').textContent.replace(/[^0-9]/g, ''));
+                    const bCount = parseInt(b.querySelector('.subscription-count').textContent.replace(/[^0-9]/g, ''));
+                    return bCount - aCount;
+                } else if (sortValue === 'subscribers-asc') {
+                    const aCount = parseInt(a.querySelector('.subscription-count').textContent.replace(/[^0-9]/g, ''));
+                    const bCount = parseInt(b.querySelector('.subscription-count').textContent.replace(/[^0-9]/g, ''));
+                    return aCount - bCount;
+                } else if (sortValue === 'name-asc') {
+                    const aName = a.querySelector('.card-header h3').textContent.toLowerCase();
+                    const bName = b.querySelector('.card-header h3').textContent.toLowerCase();
+                    return aName.localeCompare(bName);
+                } else if (sortValue === 'name-desc') {
+                    const aName = a.querySelector('.card-header h3').textContent.toLowerCase();
+                    const bName = b.querySelector('.card-header h3').textContent.toLowerCase();
+                    return bName.localeCompare(aName);
+                }
             });
+
+            // Remove all cards
+            cards.forEach(card => card.remove());
+
+            // Add sorted cards back
+            cards.forEach(card => container.appendChild(card));
         });
     </script>
 
@@ -1647,7 +1667,7 @@
         }
 
         // Call updateResultsCount after filtering
-        document.querySelectorAll('[data-filter], [data-subscriber]').forEach(function(button) {
+        document.querySelectorAll('.filter-btn').forEach(function(button) {
             button.addEventListener('click', updateResultsCount);
         });
         document.getElementById('search-input').addEventListener('keyup', updateResultsCount);
