--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- AMP Auto Ads Script -->
     <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
 
-    <!-- Structured Data for SEO -->
+    <!-- WebSite Structured Data -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -29,10 +29,7 @@
       "description": "Authentic food reviews by YouTubers from around the world",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": {
-          "@type": "EntryPoint",
-          "urlTemplate": "https://ytfoodreviews.com/search?q={search_term_string}"
-        },
+        "target": "https://ytfoodreviews.com/search?q={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     }
@@ -45,99 +42,65 @@
       "@type": "Organization",
       "name": "YT Food Reviews",
       "url": "https://ytfoodreviews.com",
-      "logo": "https://ytfoodreviews.com/logo.png",
-      "description": "Authentic food reviews by YouTubers from around the world",
-      "sameAs": [
-        "https://twitter.com/ytfoodreviews",
-        "https://facebook.com/ytfoodreviews",
-        "https://instagram.com/ytfoodreviews"
-      ]
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://ytfoodreviews.com/logo.png",
+        "width": "112",
+        "height": "112"
+      },
+      "description": "Authentic food reviews by YouTubers from around the world"
     }
     </script>
 
-    <!-- Webpage Structured Data -->
+    <!-- ItemList Structured Data -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "YT Food Reviews - Authentic Food Reviews by YouTubers Around the World",
-      "description": "Discover the best restaurants and food spots worldwide through authentic reviews by local YouTubers. Find honest food reviews from UK, USA, Canada, Europe, India, Dubai and more.",
-      "url": "https://ytfoodreviews.com",
-      "isPartOf": {
-        "@type": "WebSite",
-        "name": "YT Food Reviews",
-        "url": "https://ytfoodreviews.com"
-      },
-      "about": {
-        "@type": "Thing",
-        "name": "Food Reviews",
-        "description": "Authentic food reviews by YouTubers from around the world"
-      },
-      "mainEntity": {
-        "@type": "ItemList",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "item": {
-              "@type": "Article",
-              "name": "UK Food Reviews",
-              "url": "https://ytfoodreviews.com/uk.html",
-              "description": "Authentic food reviews across the United Kingdom by top local YouTubers"
-            }
-          },
-          {
-            "@type": "ListItem",
-            "position": 2,
-            "item": {
-              "@type": "Article",
-              "name": "USA Food Reviews",
-              "url": "https://ytfoodreviews.com/usa.html",
-              "description": "Discover American cuisine through the eyes of passionate food vloggers"
-            }
-          },
-          {
-            "@type": "ListItem",
-            "position": 3,
-            "item": {
-              "@type": "Article",
-              "name": "Canadian Food Reviews",
-              "url": "https://ytfoodreviews.com/canada.html",
-              "description": "Explore Canada's diverse culinary scene with local YouTubers"
-            }
-          },
-          {
-            "@type": "ListItem",
-            "position": 4,
-            "item": {
-              "@type": "Article",
-              "name": "Thailand Food Reviews",
-              "url": "https://ytfoodreviews.com/thailand.html",
-              "description": "Experience Thailand rich culinary traditions through authentic reviews"
-            }
-          },
-          {
-            "@type": "ListItem",
-            "position": 5,
-            "item": {
-              "@type": "Article",
-              "name": "Singapore Food Reviews",
-              "url": "https://ytfoodreviews.com/singapore.html",
-              "description": "Explore Singapore's vibrant street food and restaurant scene"
-            }
-          },
-          {
-            "@type": "ListItem",
-            "position": 6,
-            "item": {
-              "@type": "Article",
-              "name": "Dubai Food Reviews",
-              "url": "https://ytfoodreviews.com/dubai.html",
-              "description": "Discover luxury dining and hidden gems in Dubai's food scene"
-            }
-          }
-        ]
-      }
+      "@type": "ItemList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "url": "https://ytfoodreviews.com/uk.html",
+          "name": "UK Food Reviews",
+          "description": "Authentic food reviews across the United Kingdom by top local YouTubers"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "url": "https://ytfoodreviews.com/usa.html",
+          "name": "USA Food Reviews",
+          "description": "Discover American cuisine through the eyes of passionate food vloggers"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "url": "https://ytfoodreviews.com/canada.html",
+          "name": "Canadian Food Reviews",
+          "description": "Explore Canada's diverse culinary scene with local YouTubers"
+        },
+        {
+          "@type": "ListItem",
+          "position": 4,
+          "url": "https://ytfoodreviews.com/thailand.html",
+          "name": "Thailand Food Reviews",
+          "description": "Experience Thailand rich culinary traditions through authentic reviews"
+        },
+        {
+          "@type": "ListItem",
+          "position": 5,
+          "url": "https://ytfoodreviews.com/singapore.html",
+          "name": "Singapore Food Reviews",
+          "description": "Explore Singapore's vibrant street food and restaurant scene"
+        },
+        {
+          "@type": "ListItem",
+          "position": 6,
+          "url": "https://ytfoodreviews.com/dubai.html",
+          "name": "Dubai Food Reviews",
+          "description": "Discover luxury dining and hidden gems in Dubai's food scene"
+        }
+      ]
     }
     </script>
 </head>
